--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
-  },
-  "include": ["src/**/*"]
+ "compilerOptions": {
+  "strict": true,
+  // "useUnknownInCatchVariables": false,
+  "module": "commonjs",
+  "esModuleInterop": true,
+  "target": "es6",
+  "moduleResolution": "node",
+  "sourceMap": true,
+  "outDir": "dist",
+  "baseUrl": ".",
+  "paths": {
+    "*": ["node_modules/*", "src/types/*"]
+  }
+ },
+ "include": ["src/**/*"]
 }
