--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "express-validator": "^5.3.1",
     "graphql": "^15.5.1",
     "gravatar": "^1.8.0",
+    "http-errors": "^2.0.0",
     "http-status-codes": "^1.3.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
     "request": "^2.88.0"
@@ -30,8 +33,10 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/config": "0.0.34",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
     "@types/gravatar": "^1.8.0",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.0",
     "concurrently": "^4.1.0",
