--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.1.0",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "express": "^4.17.1",
+    "express-flash": "^0.0.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.2",
     "express-validator": "^5.3.1",
     "graphql": "^15.5.1",
     "gravatar": "^1.8.0",
@@ -27,7 +31,10 @@
     "http-status-codes": "^1.3.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.7",
+    "mongoose": "^5.9.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
@@ -35,10 +42,14 @@
     "@types/config": "0.0.34",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
     "@types/gravatar": "^1.8.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/mongoose": "^5.5.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.0",
     "tslint": "^6.1.3",
