--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
